--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "clean shoes api",
   "main": "handler.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "build": "babel src -d lib"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "graphql": "^0.12.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1"
   }
 }
